--- a/Module11_01/Views/Home/SessionDemo.cshtml
+++ b/Module11_01/Views/Home/SessionDemo.cshtml
@@ -12,6 +12,8 @@
 </head>
 <body>
     <div>
+        @*在本例中，因為session存到Asp.Net State Service中，
+        所以重啟網站，並不會造成session重算*@
         <h1>SessionDemo...</h1>
         
         SessionID = @Session.SessionID <br />
